<resources>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_welcome_back">Welcome Back</string>
    <string name="label_lets_get_started">Let\'s get started</string>

    <string name="hint_enter_name">Enter your name</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="hint_enter_confirm_password">Enter your password again</string>

    <string name="action_login">Login</string>
    <string name="action_signup">SignUp</string>

    <string name="action_already_have_account">Already have an account? Login</string>
    <string name="do_not_have_account">Do not have account? Sign up</string>
    <string name="transitionLabelAuthTitle" translatable="false">transition_label_auth_title</string>
    <string name="action_guest_login">Guest Login</string>
</resources>
