<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size16"
    tools:context=".login.AuthFragment">

    <TextView
        android:id="@+id/labelAuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size64"
        android:text="@string/label_lets_get_started"
        android:textSize="@dimen/text24"
        android:textColor="@color/gunmetal"
        android:transitionName="@string/transitionLabelAuthTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/AuthTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_name"
        android:layout_marginTop="@dimen/size64"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAuthTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="@integer/name_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/AuthTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:hint="@string/hint_enter_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/AuthTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:hint="@string/hint_enter_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/signUpProgress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/buttonSignup"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSignup"
        app:layout_constraintRight_toRightOf="@+id/buttonSignup"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignup"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:text="@string/action_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMoveToLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:paddingTop="@dimen/size8"
        android:paddingRight="@dimen/size8"
        android:paddingBottom="@dimen/size8"
        android:text="@string/action_already_have_account"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup"
        app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
